# multi-agent-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
frontend/: Dockerfile  entrypoint.sh  main.py
frontend/templates/: index.html
search_mcp_server/: help_customer.py  pyproject.toml
vitra_ai/: .env-example  agent.py  main.py  prompt.py  pyproject.toml
vitra_ai/sub_agents/health_mate/: agent.py  prompt.py
vitra_ai/sub_agents/seller/: agent.py  prompt.py  tools.py
vitra_ai/sub_agents/shop_mate/: agent.py  prompt.py
