[project]
name = "vitra-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.57.1",
    "black>=25.1.0",
    "google-adk>=1.7.0",
    "google-generativeai>=0.8.5",
    "litellm>=1.74.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]